--- a/pet-advice.html
+++ b/pet-advice.html
@@ -96,7 +96,7 @@
           <div class="row">
             <div class="col-12 advice-page-background"></div>
             <div class="advice-slogan">
-              <p>Recommended Cat Care videos below...</p>
+              <h2>Recommended Cat Care videos below...</h2>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
         <div class="container-fluid videos-section">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-11">
-              <p class="video-title">Benefits of having a cat</p>
+              <h3 class="video-title">Benefits of having a cat</h3>
               <div class="embed-responsive embed-responsive-4by3">
                 <iframe
                   class="video-box embed-responsive-item"
@@ -116,7 +116,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-11">
-              <p class="video-title">Mistakes owners make</p>
+              <h3 class="video-title">Mistakes owners make</h3>
               <div class="embed-responsive embed-responsive-4by3">
                 <iframe
                   class="video-box embed-responsive-item"
@@ -129,7 +129,7 @@
 
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-11">
-              <p class="video-title">Neutering</p>
+              <h3 class="video-title">Neutering</h3>
               <div class="embed-responsive embed-responsive-4by3">
                 <iframe
                   class="video-box embed-responsive-item"
@@ -142,7 +142,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-11">
-              <p class="video-title">Kitten Care</p>
+              <h3 class="video-title">Kitten Care</h3>
               <div class="embed-responsive embed-responsive-4by3">
                 <iframe
                   class="video-box embed-responsive-item"
@@ -155,7 +155,7 @@
 
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-11">
-              <p class="video-title">Causes of stress</p>
+              <h3 class="video-title">Causes of stress</h3>
               <div class="embed-responsive embed-responsive-4by3">
                 <iframe
                   class="video-box embed-responsive-item"
@@ -165,7 +165,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-11">
-              <p class="video-title">Make your cat happy</p>
+              <h3 class="video-title">Make your cat happy</h3>
               <div class="embed-responsive embed-responsive-4by3">
                 <iframe
                   class="video-box embed-responsive-item"
@@ -193,16 +193,25 @@
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
               <p>Help Today</p>
-              <a href="support-us.html#donate"
-                ><button
-                  type="button"
-                  class="btn btn-secondary button-color"
-                  data-toggle="modal"
-                >
-                  Donate
-                </button></a
+              <a
+                href="support-us.html#donate"
+                class="btn btn-secondary btn-sm active"
+                role="button"
+                >Donate</a
+              >
+              <a
+                href="index.html#adopt"
+                class="btn btn-secondary btn-sm active"
+                role="button"
+                >Adopt</a
+              >
+              <a
+                href="support-us.html#sponsor"
+                class="btn btn-secondary btn-sm active"
+                role="button"
+                >Sponsor</a
               >
             </div>
 
