--- a/what-we-do.html
+++ b/what-we-do.html
@@ -95,7 +95,7 @@
         <div class="long-image">
           <div class="upper-image"></div>
           <div class="upper-statement">
-            <p>We give shelter to abandoned Cats and Kittens.</p>
+            <h2>We give shelter to abandoned Cats and Kittens.</h2>
           </div>
         </div>
       </section>
@@ -104,7 +104,7 @@
         <div class="long-image">
           <div class="middle-image"></div>
           <div class="middle-statement">
-            <p>We rehome Cats and Kittens into new loving homes.</p>
+            <h2>We rehome Cats and Kittens into new loving homes.</h2>
           </div>
         </div>
       </section>
@@ -113,9 +113,9 @@
         <div class="long-image">
           <div class="lower-image"></div>
           <div class="lower-statement">
-            <p>
+            <h2>
               We make sure our Cats and Kittens receive excellent Vetinary care.
-            </p>
+            </h2>
           </div>
         </div>
       </section>
@@ -137,14 +137,23 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
               <p>Help Today</p>
-              <a href="support-us.html#donate"
-                ><button
-                  type="button"
-                  class="btn btn-secondary button-color"
-                  data-toggle="modal"
-                >
-                  Donate
-                </button></a
+              <a
+                href="support-us.html#donate"
+                class="btn btn-secondary btn-sm active"
+                role="button"
+                >Donate</a
+              >
+              <a
+                href="index.html#adopt"
+                class="btn btn-secondary btn-sm active"
+                role="button"
+                >Adopt</a
+              >
+              <a
+                href="support-us.html#sponsor"
+                class="btn btn-secondary btn-sm active"
+                role="button"
+                >Sponsor</a
               >
             </div>
 
