updated support-us page after testing issues

--- a/support-us.html
+++ b/support-us.html
@@ -117,36 +117,123 @@
         </div>
       </section>
 
-      <section>
+      <section id="sponsor">
         <div class="container-fluid sponsor-panel">
-          <div id="sponsor">
-            <h2 class="title">Sponsor a cat today!</h2>
-            <div class="row">
-              <div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-box">
+          <div class="row">
+            <div class="col-12">            
+                <h2 class="title">Sponsor a cat today!</h2>
+            </div>
+          </div>
+
+          <div class="row">
+
+            <div class="col-lg-3 col-md-6 col-sm-12">
                 <img
                   src="assets/images/jess.jpg"
                   width="253"
                   height="182"
-                  alt="jess-cat"
+                  alt="jess-cat" 
                 />
-
-                <div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-details">
-                  <p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div>
                     <strong>Jess/Female/1</strong> <br />
                     Will you sponsor Jess. She is a loveable kitten who believes
                     she is a plant. We often find her lounging out inside
                     different plant pots.
-                  </p>
-                  <button
+                </div>
+                <button
                     type="submit"
-                    class="btn btn-secondary btn-sm"
+                    class="btn btn-secondary btn-sm pull-right"
                     data-toggle="modal"
                     data-target="#jessModal"
-                  >
+                >
                     Sponsor
-                  </button>
+                </button>
+            </div>
+
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img
+                  src="assets/images/nico.jpg"
+                  width="253"
+                  height="182"
+                  alt="nico-cat" 
+                />
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div>
+                     <strong> Nico/Male/4</strong> <br />
+                    Will you sponsor Nico. He loves to sleep, but those rare
+                    moments of alertness, he will exhaust you with his speed and
+                    energy.
                 </div>
-              </div>
+                    <button
+                    type="submit"
+                    class="btn btn-secondary btn-sm pull-right"
+                    data-toggle="modal"
+                    data-target="#jessModal"
+                    >
+                    Sponsor
+                </button>
+            </div>            
+
+          </div>
+                      
+          <div class="row">
+
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img
+                  src="assets/images/cody.png"
+                  width="253"
+                  height="182"
+                  alt="jess-cat" 
+                />
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <p>
+                    <strong>Cody/Male/6</strong> <br />
+                    Will you sponsor Cody. He loves to cuddle and will often
+                    curl up on somebody's lap to sleep.
+                </p>
+                    <button
+                    type="submit"
+                    class="btn btn-secondary btn-sm pull-right"
+                    data-toggle="modal"
+                    data-target="#jessModal"
+                    >
+                    Sponsor
+                </button>
+            </div>
+
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img
+                  src="assets/images/Kiara.png"
+                  width="253"
+                  height="182"
+                  alt="jess-cat" 
+                />
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div>
+                    <strong>Kiara/Female/4 months</strong><br />Will you sponsor
+                    Kiara. She is our youngest kitten, and still is very
+                    curious. She loves our camera and loves to pose.
+                </div>
+                    <button
+                    type="submit"
+                    class="btn btn-secondary btn-sm pull-right"
+                    data-toggle="modal"
+                    data-target="#jessModal"
+                    >
+                    Sponsor
+                </button>
+            </div>            
+
+          </div>
+
+
+
+            <!--
               <div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-box">
                 <img
                   src="assets/images/nico.jpg"
@@ -156,7 +243,7 @@
                 />
 
                 <div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-details">
-                  <p>
+                  <p class="pull-right">
                     <strong> Nico/Male/4</strong> <br />
                     Will you sponsor Nico. He loves to sleep, but those rare
                     moments of alertness, he will exhaust you with his speed and
@@ -164,7 +251,7 @@
                   </p>
                   <button
                     type="submit"
-                    class="btn btn-secondary btn-sm"
+                    class="btn btn-secondary btn-sm pull-right"
                     data-toggle="modal"
                     data-target="#nicoModal"
                   >
@@ -181,14 +268,14 @@
                 />
 
                 <div class="col-12 col-lg-6 col-md-6 col-sm-6 sponsor-details">
-                  <p>
+                  <p class="pull-right">
                     <strong>Cody/Male/6</strong> <br />
                     Will you sponsor Cody. He loves to cuddle and will often
                     curl up on somebody's lap to sleep.
                   </p>
                   <button
                     type="submit"
-                    class="btn btn-secondary btn-sm"
+                    class="btn btn-secondary btn-sm pull-right"
                     data-toggle="modal"
                     data-target="#codyModal"
                   >
@@ -204,14 +291,14 @@
                   alt="kiara-cat"
                 />
                 <div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-details">
-                  <p>
+                  <p class="pull-right">
                     <strong>Kiara/Female/4 months</strong><br />Will you sponsor
                     Kiara. She is our youngest kitten, and still is very
                     curious. She loves our camera and loves to pose.
                   </p>
                   <button
                     type="submit"
-                    class="btn btn-secondary btn-sm"
+                    class="btn btn-secondary btn-sm pull-right"
                     data-toggle="modal"
                     data-target="#kiaraModal"
                   >
@@ -219,8 +306,7 @@
                   </button>
                 </div>
               </div>
-            </div>
-          </div>
+            -->
         </div>
       </section>
 
@@ -371,12 +457,19 @@
             </div>
             <div class="modal-body">
               <div class="row">
-                <div
-                  class="col-lg-12 col-md-12 col-sm-12 col-12 modal-image"
-                ></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-12 modal-image">
+                </div>
                 <div class="address-info">
-                  <p>CatsUnion, The Alley, Little Wenlock, Telford, TF6 5BG</p>
-                  <p>Telephone: 01632 960809</p>
+                    <!-- <iframe 
+                        width="500" height="350" 
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+                        src="https://www.openstreetmap.org/export/embed.html?bbox=-2.5364470481872563%2C52.653087730792336%2C-2.5081229209899907%2C52.664567280659014&amp;layer=mapnik" 
+                        style="border: 0px solid white; width: 100%;">
+                    </iframe> -->
+
+                  <div> <i class="fa fa-map"></i> CatsUnion, The Alley, Little Wenlock, Telford, TF6 5BG </div>
+                  <div> <i class="fa fa-phone"></i> Telephone: <a href="tel:01234567890">01234 567890</a> </div>
+                  <div> <i class="fa fa-envelope"></i> Email: <a href="mailto:contact@catsunion.com">contact@catsunion.com</a> </div>
                 </div>
               </div>
               <div class="modal-footer">
