made changes to font styles, button colours and added a link to the adopt get in touch page

--- a/pet-advice.html
+++ b/pet-advice.html
@@ -14,7 +14,7 @@
       type="text/css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Kaushan+Script&family=Patua+One&display=swap"
       rel="stylesheet"
     />
     <link
@@ -193,37 +193,35 @@
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
-              <p>Help Today</p>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
               <a
                 href="support-us.html#donate"
-                class="btn btn-secondary btn-sm active"
+                class="btn btn-primary btn-sm active"
                 role="button"
                 >Donate</a
               >
               <a
                 href="index.html#adopt"
-                class="btn btn-secondary btn-sm active"
+                class="btn btn-primary btn-sm active"
                 role="button"
                 >Adopt</a
               >
               <a
                 href="support-us.html#sponsor"
-                class="btn btn-secondary btn-sm active"
+                class="btn btn-primary btn-sm active"
                 role="button"
                 >Sponsor</a
               >
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4 col-4 Location">
-              <p>Location</p>
               <button
                 type="button"
-                class="btn btn-secondary button-color"
+                class="btn btn-primary btn-sm"
                 data-toggle="modal"
                 data-target="#google-location-modal"
               >
-                Map
+                Contact Us
               </button>
             </div>
           </div>
