--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       type="text/css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Kaushan+Script&family=Patua+One&display=swap"
       rel="stylesheet"
     />
     <link
@@ -171,7 +171,16 @@
             </div>
             <p class="subtitle">
               Can you give us a loving home? <br />
-              Give CatsUnion a call.
+
+              <a
+                data-target="#google-location-modal"
+                data-toggle="modal"
+                class="MainNavText"
+                id="MainNavHelp"
+                href="#google-location-modal"
+                >Get in touch</a
+              >
+              with us at CatsUnion today!
             </p>
           </div>
         </div>
@@ -242,36 +251,34 @@
               ></a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
-              <p>Help Today</p>
               <a
                 href="support-us.html#donate"
-                class="btn btn-secondary btn-sm active"
+                class="btn btn-primary btn-sm active"
                 role="button"
                 >Donate</a
               >
               <a
                 href="#adopt"
-                class="btn btn-secondary btn-sm active"
+                class="btn btn-primary btn-sm active"
                 role="button"
                 >Adopt</a
               >
               <a
                 href="support-us.html#sponsor"
-                class="btn btn-secondary btn-sm active"
+                class="btn btn-primary btn-sm active"
                 role="button"
                 >Sponsor</a
               >
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4 col-4 Location">
-              <p>Location</p>
               <button
                 type="button"
-                class="btn btn-secondary button-color"
+                class="btn btn-primary btn-sm"
                 data-toggle="modal"
                 data-target="#google-location-modal"
               >
-                Map
+                Contact Us
               </button>
             </div>
           </div>
@@ -305,8 +312,27 @@
                   class="col-lg-12 col-md-12 col-sm-12 col-12 modal-image"
                 ></div>
                 <div class="address-info">
-                  <p>CatsUnion, The Alley, Little Wenlock, Telford, TF6 5BG</p>
-                  <p>Telephone: 01632 960809</p>
+                  <!-- <iframe 
+                        width="500" height="350" 
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+                        src="https://www.openstreetmap.org/export/embed.html?bbox=-2.5364470481872563%2C52.653087730792336%2C-2.5081229209899907%2C52.664567280659014&amp;layer=mapnik" 
+                        style="border: 0px solid white; width: 100%;">
+                    </iframe> -->
+
+                  <div>
+                    <i class="fa fa-map"></i> CatsUnion, The Alley, Little
+                    Wenlock, Telford, TF6 5BG
+                  </div>
+                  <div>
+                    <i class="fa fa-phone"></i> Telephone:
+                    <a href="tel:01234567890">01234 567890</a>
+                  </div>
+                  <div>
+                    <i class="fa fa-envelope"></i> Email:
+                    <a href="mailto:contact@catsunion.com"
+                      >contact@catsunion.com</a
+                    >
+                  </div>
                 </div>
               </div>
               <div class="modal-footer">
