--- a/what-we-do.html
+++ b/what-we-do.html
@@ -14,7 +14,7 @@
       type="text/css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Kaushan+Script&family=Patua+One&display=swap"
       rel="stylesheet"
     />
     <link
@@ -94,7 +94,7 @@
       <section>
         <div class="long-image">
           <div class="upper-image"></div>
-          <div class="upper-statement">
+          <div class=" image-statement upper-statement">
             <h2>We give shelter to abandoned Cats and Kittens.</h2>
           </div>
         </div>
@@ -103,7 +103,7 @@
       <section>
         <div class="long-image">
           <div class="middle-image"></div>
-          <div class="middle-statement">
+          <div class="image-statement middle-statement">
             <h2>We rehome Cats and Kittens into new loving homes.</h2>
           </div>
         </div>
@@ -112,7 +112,7 @@
       <section>
         <div class="long-image">
           <div class="lower-image"></div>
-          <div class="lower-statement">
+          <div class="image-statement lower-statement">
             <h2>
               We make sure our Cats and Kittens receive excellent Vetinary care.
             </h2>
@@ -136,36 +136,34 @@
               ></a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
-              <p>Help Today</p>
               <a
                 href="support-us.html#donate"
-                class="btn btn-secondary btn-sm active"
+                class="btn btn-primary btn-sm active"
                 role="button"
                 >Donate</a
               >
               <a
                 href="index.html#adopt"
-                class="btn btn-secondary btn-sm active"
+                class="btn btn-primary btn-sm active"
                 role="button"
                 >Adopt</a
               >
               <a
                 href="support-us.html#sponsor"
-                class="btn btn-secondary btn-sm active"
+                class="btn btn-primary btn-sm active"
                 role="button"
                 >Sponsor</a
               >
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4 col-4 Location">
-              <p>Location</p>
               <button
                 type="button"
-                class="btn btn-secondary button-color"
+                class="btn btn-primary btn-sm"
                 data-toggle="modal"
                 data-target="#google-location-modal"
               >
-                Map
+                Contact Us
               </button>
             </div>
           </div>
