--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
       <section>
         <div class="container-fluid donate-panel">
-          <h2 class="title">Please Donate!</h2>
+          <h2 class="title"><a href="support-us.html#donate">Please Donate!</a></h2>
           <p class="subtitle">
             By donating just £1 per week, <br />
             you could help us to give our cats...
