--- a/pet-advice.html
+++ b/pet-advice.html
@@ -195,7 +195,7 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
               <a
-                href="support-us.html#donate"
+                href="#donate"
                 class="btn btn-primary btn-sm active"
                 role="button"
                 >Donate</a
@@ -207,7 +207,7 @@
                 >Adopt</a
               >
               <a
-                href="support-us.html#sponsor"
+                href="#sponsor"
                 class="btn btn-primary btn-sm active"
                 role="button"
                 >Sponsor</a
@@ -255,8 +255,27 @@
                   class="col-lg-12 col-md-12 col-sm-12 col-12 modal-image"
                 ></div>
                 <div class="address-info">
-                  <p>CatsUnion, The Alley, Little Wenlock, Telford, TF6 5BG</p>
-                  <p>Telephone: 01632 960809</p>
+                  <!-- <iframe 
+                        width="500" height="350" 
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+                        src="https://www.openstreetmap.org/export/embed.html?bbox=-2.5364470481872563%2C52.653087730792336%2C-2.5081229209899907%2C52.664567280659014&amp;layer=mapnik" 
+                        style="border: 0px solid white; width: 100%;">
+                    </iframe> -->
+
+                  <div>
+                    <i class="fa fa-map"></i> CatsUnion, The Alley, Little
+                    Wenlock, Telford, TF6 5BG
+                  </div>
+                  <div>
+                    <i class="fa fa-phone"></i> Telephone:
+                    <a href="tel:01234567890">01234 567890</a>
+                  </div>
+                  <div>
+                    <i class="fa fa-envelope"></i> Email:
+                    <a href="mailto:contact@catsunion.com"
+                      >contact@catsunion.com</a
+                    >
+                  </div>
                 </div>
               </div>
               <div class="modal-footer">
