--- a/support-us.html
+++ b/support-us.html
@@ -409,7 +409,9 @@
       </div>
     </div>
 
-    <!--code for paypal purchasing https://bootsnipp.com/snippets/rlKd6-->
+    <!--code for paypal purchasing https://bootsnipp.com/snippets/rlKd6
+    and used this website http://www.itaynoy.com/sites/paypal_button_generator/ to create a purchase screen!-->
+
 
     <div
       class="modal fade"
