updated cat image layout

--- a/pet-advice.html
+++ b/pet-advice.html
@@ -128,11 +128,11 @@
                   <div class="col-lg-4 col-md-4 col-sm-4 col-4 social-media">
                      Follow us:
                      &nbsp;
-                     <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                     <a href="http://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
                      &nbsp;
-                     <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                     <a href="http://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
                      &nbsp;
-                     <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                     <a href="http://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
                      <a href="support-us.html#donate">Donate</a>
@@ -156,7 +156,7 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="col-12" style="margin: 10px 0px;">
+                  <div class="col-12" style="margin: 10px 0px;" >
                      <div id="copyright">
                         Copyright <i class="fas fa-copyright"></i> 2020 CatsUnion
                      </div>
