--- a/support-us.html
+++ b/support-us.html
@@ -89,7 +89,7 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="col-lg-3 col-md-6 col-sm-12 cat-image">
+                  <div class="col-lg-3 col-md-6 col-sm-12 cat-image sponsor-box">
                      <img
                         src="assets/images/jess.jpg"
                         width="253"
@@ -113,7 +113,7 @@
                      Sponsor
                      </button>
                   </div>
-                  <div class="col-lg-3 col-md-6 col-sm-12 cat-image">
+                  <div class="col-lg-3 col-md-6 col-sm-12 cat-image sponsor-box">
                      <img
                         src="assets/images/nico.jpg"
                         width="253"
@@ -126,6 +126,7 @@
                         <strong> Nico/Male/4</strong> <br />
                         Will you sponsor Nico. He loves to sleep, but those rare moments
                         of alertness, he will exhaust you with his speed and energy.
+
                      </div>
                      <button
                         type="submit"
@@ -138,7 +139,7 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="col-lg-3 col-md-6 col-sm-12 cat-image">
+                  <div class="col-lg-3 col-md-6 col-sm-12 cat-image sponsor-box">
                      <img
                         src="assets/images/cody.png"
                         width="253"
@@ -161,7 +162,7 @@
                      Sponsor
                      </button>
                   </div>
-                  <div class="col-lg-3 col-md-6 col-sm-12 cat-image">
+                  <div class="col-lg-3 col-md-6 col-sm-12 cat-image sponsor-box">
                      <img
                         src="assets/images/Kiara.png"
                         width="253"
@@ -255,11 +256,11 @@
                   <div class="col-lg-4 col-md-4 col-sm-4 col-4 social-media">
                      Follow us:
                      &nbsp;
-                     <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                     <a href="http://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
                      &nbsp;
-                     <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                     <a href="http://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
                      &nbsp;
-                     <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                     <a href="http://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
                      <a href="support-us.html#donate">Donate</a>
@@ -283,7 +284,7 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="col-12" style="margin: 10px 0px;">
+                  <div class="col-12" style="margin: 10px 0px;" >
                      <div id="copyright">
                         Copyright <i class="fas fa-copyright"></i> 2020 CatsUnion
                      </div>
