last few design choice changes

--- a/support-us.html
+++ b/support-us.html
@@ -224,8 +224,8 @@
               <h2 class="fundraising-title">Fundraising</h2>
               <h3 class="fundraising-info">
                 Want to support in a different and unique way? Please get in
-                touch with us via Email to
-                <strong>fundraising@catsunion.com</strong> for more information
+                touch with us via email to
+                <a href="mailto:fundraising@catsunion.com?subject=Fundraising">fundraising@catsunion.com</a> for more information
                 of how you can help, and how you can send any money raised to
                 us.
               </h3>
@@ -268,7 +268,7 @@
                         <label for="coverletter">Attach cover letter</label>
                         <input type="file" required id="coverletter" />
                       </div>
-                      <button type="submit" class="btn btn-secondary">
+                      <button type="submit" class="btn btn-secondary btn-sm pull-right">
                         Submit
                       </button>
                     </form>
